Fix input height on Firefox

--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
 
 #input {
   width: 80%;
-  height: 25px;
+  height: 55px;
   text-align: center;
   background: transparent;
   border: none;
